sec: implement comprehensive workflow security hardening
- Replace critical TruffleHog curl|sh installation with official GitHub Action
- Add GitHub token validation for security-scan workflow operations
- Fix JSON parsing logic error in dependency audit with proper fallback handling
- Implement job-specific cache keys to prevent collision between workflow runs
- Add timeout configurations to all workflow jobs (5-30min based on complexity)
- Fix continue-on-error usage in security scans to ensure failures are visible
- Add comprehensive error handling for external package dependencies (jq, gh, bunx)

Security impact:
- Eliminates command injection vulnerability in TruffleHog installation
- Prevents silent failures in security scanning operations
- Improves workflow reliability and resource management
- Ensures proper error visibility and debugging capabilities
- Addresses OWASP CI/CD Security Top 10 compliance requirements

All workflow YAML syntax validated and expert analysis recommendations implemented.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
   lint-and-format:
     name: Lint & Format
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     permissions:
       contents: read
     steps:
@@ -33,7 +34,7 @@ jobs:
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4
         with:
           path: ~/.bun/install/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          key: ${{ runner.os }}-bun-lint-format-${{ hashFiles('**/bun.lock') }}
           restore-keys: |
             ${{ runner.os }}-bun-
 
@@ -79,6 +80,7 @@ jobs:
   test:
     name: Test (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     permissions:
       contents: read
     strategy:
@@ -109,7 +111,7 @@ jobs:
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4
         with:
           path: ~/.bun/install/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          key: ${{ runner.os }}-bun-test-node${{ matrix.node-version }}-${{ hashFiles('**/bun.lock') }}
           restore-keys: |
             ${{ runner.os }}-bun-
 
@@ -132,6 +134,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     permissions:
       contents: read
     needs: [lint-and-format, test]
@@ -148,7 +151,7 @@ jobs:
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4
         with:
           path: ~/.bun/install/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          key: ${{ runner.os }}-bun-build-${{ hashFiles('**/bun.lock') }}
           restore-keys: |
             ${{ runner.os }}-bun-
 
@@ -181,6 +184,7 @@ jobs:
   integration-test:
     name: Integration Test
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     permissions:
       contents: read
     needs: [build]
@@ -239,6 +243,7 @@ jobs:
   notify:
     name: Notify
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     permissions:
       contents: read
     needs: [lint-and-format, test, build, security-scan, integration-test]
