--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
   check-ci-status:
     name: Check CI Pipeline Status
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Check CI status for this commit
         uses: actions/github-script@v7
@@ -42,6 +43,7 @@ jobs:
   build-and-release:
     name: Build and Release
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     environment:
       name: production
       url: https://www.npmjs.com/package/mikrus
@@ -145,6 +147,7 @@ jobs:
   build-and-test:
     name: Build and Integration Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     needs: [check-ci-status]
     permissions:
       contents: read
@@ -166,7 +169,7 @@ jobs:
         uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4
         with:
           path: ~/.bun/install/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          key: ${{ runner.os }}-bun-release-${{ hashFiles('**/bun.lock') }}
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -205,6 +208,7 @@ jobs:
   publish-npm:
     name: Publish to NPM
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     environment:
       name: npm-production
       url: https://www.npmjs.com/package/mikrus
